--- a/qr/style.css
+++ b/qr/style.css
@@ -1,30 +1,71 @@
-body {
+/* Reset default styles */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    background-color: #232323;
+    color: #fff;
     font-family: Arial, sans-serif;
+    font-size: 16px;
+  }
+  
+  #container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 40px;
     text-align: center;
   }
   
-  form {
-    margin-top: 20px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 10px;
+  h1 {
+    font-size: 32px;
+    margin-bottom: 20px;
   }
   
   input[type="text"] {
-    width: 300px;
-    padding: 5px;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
     font-size: 16px;
+    border: none;
+    border-radius: 4px;
   }
   
   button {
-    margin-top: 10px;
-    padding: 5px 10px;
+    display: block;
+    width: 100%;
+    padding: 10px;
     font-size: 16px;
+    color: #fff;
+    background-color: #1fd655;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
   }
   
   #qrcode {
     margin-top: 20px;
+  }
+  
+  /* Dark mode styles */
+  body.dark-mode {
+    background-color: #232323;
+    color: #fff;
+  }
+  
+  body.dark-mode input[type="text"],
+  body.dark-mode button {
+    background-color: #000;
+    color: #fff;
+  }
+  
+  body.dark-mode button {
+    background-color: #1fd655;
+  }
+  
+  body.dark-mode #qrcode {
+    filter: invert(1);
   }
   
