--- a/bookmarks/style.css
+++ b/bookmarks/style.css
@@ -3,49 +3,55 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-}
-
-h1 {
+    background-color: #232323;
+    color: #fff;
+  }
+  
+  h1 {
     text-align: center;
     margin-top: 50px;
-}
-
-form {
+    font-size: 32px;
+  }
+  
+  form {
     margin: 50px auto;
     max-width: 500px;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #1fd655;
     border-radius: 5px;
-}
-
-input[type="text"],
-input[type="url"] {
+    background-color: #232323;
+  }
+  
+  input[type="text"],
+  input[type="url"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid #ccc;
+    border: none;
     border-radius: 5px;
     box-sizing: border-box;
     font-size: 16px;
-}
-
-input[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #1fd655;
+    color: #fff;
+  }
+  
+  input[type="submit"] {
+    background-color: #1fd655;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
-}
-
-input[type="file"] {
+  }
+  
+  input[type="file"] {
     display: none;
-}
-
-label.upload-btn {
+  }
+  
+  label.upload-btn {
     display: block;
-    background-color: #4CAF50;
+    background-color: #1fd655;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -54,23 +60,23 @@ label.upload-btn {
     font-size: 16px;
     text-align: center;
     margin-bottom: 10px;
-}
-
- label.upload-btn:hover {
-    background-color: #3e8e41;
-}
-
-ul {
+  }
+  
+  label.upload-btn:hover {
+    background-color: #1da64e;
+  }
+  
+  ul {
     list-style: none;
     padding: 0;
     margin: 0;
-}
-
-li {
+  }
+  
+  li {
     margin-bottom: 10px;
-}
-
-.delete-btn {
+  }
+  
+  .delete-btn {
     background-color: #f44336;
     color: white;
     padding: 5px 10px;
@@ -79,25 +85,28 @@ li {
     cursor: pointer;
     font-size: 16px;
     margin-left: 10px;
-}
-
-.delete-btn:hover {
+  }
+  
+  .delete-btn:hover {
     background-color: #d32f2f;
-}
-
-.embed-container {
+  }
+  
+  .embed-container {
     position: relative;
     padding-bottom: 56.25%;
     height: 0;
     overflow: hidden;
-}
-
-.embed-container iframe,
-.embed-container object,
-.embed-container embed {
+  }
+  
+  .embed-container iframe,
+  .embed-container object,
+  .embed-container embed {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-}
+    border: none;
+    border-radius: 5px;
+  }
+  
