golden rod integration

--- a/bookmarks/style.css
+++ b/bookmarks/style.css
@@ -51,10 +51,10 @@ body {
   
   label.upload-btn {
     display: block;
-    background-color: #1fd655;
+    background-color: transparent;
     color: white;
     padding: 10px 20px;
-    border: none;
+    border: solid 1px goldenrod;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
