--- a/bookmarks/style.css
+++ b/bookmarks/style.css
@@ -27,11 +27,11 @@ body {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
-    border: none;
+    border: 1px solid goldenrod;
     border-radius: 5px;
     box-sizing: border-box;
     font-size: 16px;
-    background-color: #1fd655;
+    background-color: transparent;
     color: #fff;
   }
   
