--- a/fitcal-dev/style.css
+++ b/fitcal-dev/style.css
@@ -13,15 +13,18 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   }
   
-  .header {
+  h1 {
     text-align: center;
   }
   
   .form {
     margin-top: 20px;
-    padding: 10px;
-    border: 1px solid #1fd655;
-    border-radius: 5px;
+  }
+  
+  .label {
+    color: #fff;
+    display: block;
+    margin-bottom: 5px;
   }
   
   .input {
